# fastapi-starter

./: Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
app/: main.py
bruno/: bruno.json  ping.bru
